name:                mltool
version:             0.1.0.0
synopsis:            Machine Learning Toolbox
description:         Please see README.md
homepage:            https://github.com/alexander-ignatyev/mltool
license:             BSD3
license-file:        LICENSE
author:              Alexander Ignatyev
maintainer:          ignatyev.alexander@gmail.com
copyright:           Alexander Ignatyev
category:            math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MachineLearning
                     , MachineLearning.Optimization
                     , MachineLearning.Optimization.GradientDescent
                     , MachineLearning.Optimization.MinibatchGradientDescent
                     , MachineLearning.Regression
                     , MachineLearning.Model
                     , MachineLearning.LeastSquaresModel
                     , MachineLearning.LogisticModel
                     , MachineLearning.MultiSvmClassifier
                     , MachineLearning.SoftmaxClassifier
                     , MachineLearning.Classification.Binary
                     , MachineLearning.Classification.OneVsAll
                     , MachineLearning.Classification.MultiClass
                     , MachineLearning.NeuralNetwork
                     , MachineLearning.NeuralNetwork.Layer
                     , MachineLearning.NeuralNetwork.Regularization
                     , MachineLearning.NeuralNetwork.ReluActivation
                     , MachineLearning.NeuralNetwork.TanhActivation
                     , MachineLearning.NeuralNetwork.SigmoidActivation
                     , MachineLearning.NeuralNetwork.MultiSvmLoss
                     , MachineLearning.NeuralNetwork.SoftmaxLoss
                     , MachineLearning.NeuralNetwork.LogisticLoss
                     , MachineLearning.NeuralNetwork.Topology
                     , MachineLearning.NeuralNetwork.TopologyMaker
                     , MachineLearning.NeuralNetwork.WeightInitialization
                     , MachineLearning.PCA
                     , MachineLearning.Clustering
                     , MachineLearning.TerminalProgress
                     , MachineLearning.Regularization
                     , MachineLearning.Random
                     , MachineLearning.Types
                     , MachineLearning.Utils
  other-modules:       MachineLearning.Classification.Internal
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , hmatrix
                     , hmatrix-gsl
                     , hmatrix-gsl-stats
                     , ascii-progress
                     , deepseq
                     , random
                     , MonadRandom
  default-language:    Haskell2010


test-suite mltool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       MachineLearning.Classification.BinaryTest
                     , MachineLearning.Classification.OneVsAllTest
                     , MachineLearning.ClusteringTest
                     , MachineLearning.DataSets
                     , MachineLearning.LeastSquaresModelTest
                     , MachineLearning.LogisticModelTest
                     , MachineLearning.MultiSvmClassifierTest
                     , MachineLearning.NeuralNetwork.TopologyTest
                     , MachineLearning.NeuralNetwork.WeightInitializationTest
                     , MachineLearning.NeuralNetworkTest
                     , MachineLearning.Optimization.GradientDescentTest
                     , MachineLearning.Optimization.MinibatchGradientDescentTest
                     , MachineLearning.PCATest
                     , MachineLearning.RandomTest
                     , MachineLearning.RegressionTest
                     , MachineLearning.SoftmaxClassifierTest
                     , MachineLearning.UtilsTest
                     , MachineLearningTest
                     , Test.HUnit.Approx
                     , Test.HUnit.Plus
  build-depends:       base
                     , mltool
                     , vector
                     , hmatrix
                     , hmatrix-gsl-stats
                     , random
                     , MonadRandom
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , HUnit
                     , QuickCheck > 2.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexander-ignatyev/mltool
