name:                mltool
version:             0.2.0.1
synopsis:            Machine Learning Toolbox
description:
    Haskell Machine Learning Toolkit
    includes various methods of supervised learning:
    linear regression, logistic regression, SVN, neural networks, etc.
    as well as some methods of unsupervised methods: K-Means and PCA.

homepage:            https://github.com/aligusnet/mltool
license:             BSD3
license-file:        LICENSE
author:              Alexander Ignatyev
maintainer:          ignatyev.alexander@gmail.com
copyright:           (c) 2016-2018 Alexander Ignatyev
category:            math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MachineLearning
                     , MachineLearning.Optimization
                     , MachineLearning.Optimization.GradientDescent
                     , MachineLearning.Optimization.MinibatchGradientDescent
                     , MachineLearning.Regression
                     , MachineLearning.Model
                     , MachineLearning.LeastSquaresModel
                     , MachineLearning.LogisticModel
                     , MachineLearning.MultiSvmClassifier
                     , MachineLearning.SoftmaxClassifier
                     , MachineLearning.Classification.Binary
                     , MachineLearning.Classification.OneVsAll
                     , MachineLearning.Classification.MultiClass
                     , MachineLearning.NeuralNetwork
                     , MachineLearning.NeuralNetwork.Layer
                     , MachineLearning.NeuralNetwork.Regularization
                     , MachineLearning.NeuralNetwork.ReluActivation
                     , MachineLearning.NeuralNetwork.TanhActivation
                     , MachineLearning.NeuralNetwork.SigmoidActivation
                     , MachineLearning.NeuralNetwork.MultiSvmLoss
                     , MachineLearning.NeuralNetwork.SoftmaxLoss
                     , MachineLearning.NeuralNetwork.LogisticLoss
                     , MachineLearning.NeuralNetwork.Topology
                     , MachineLearning.NeuralNetwork.TopologyMaker
                     , MachineLearning.NeuralNetwork.WeightInitialization
                     , MachineLearning.PCA
                     , MachineLearning.Clustering
                     , MachineLearning.TerminalProgress
                     , MachineLearning.Regularization
                     , MachineLearning.Random
                     , MachineLearning.Types
                     , MachineLearning.Utils
  other-modules:       MachineLearning.Classification.Internal
  build-depends:       base >= 4.7 && < 5
                     , vector >= 0.11
                     , hmatrix >= 0.18.0.0
                     , hmatrix-gsl >= 0.17
                     , hmatrix-morpheus >= 0.1.1.0
                     , ascii-progress >= 0.3.3.0
                     , deepseq
                     , random >= 1.1
                     , MonadRandom >= 0.4.2.3
  default-language:    Haskell2010


test-suite mltool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       MachineLearning.Classification.BinaryTest
                     , MachineLearning.Classification.OneVsAllTest
                     , MachineLearning.ClusteringTest
                     , MachineLearning.DataSets
                     , MachineLearning.LeastSquaresModelTest
                     , MachineLearning.LogisticModelTest
                     , MachineLearning.MultiSvmClassifierTest
                     , MachineLearning.NeuralNetwork.TopologyTest
                     , MachineLearning.NeuralNetwork.WeightInitializationTest
                     , MachineLearning.NeuralNetworkTest
                     , MachineLearning.Optimization.GradientDescentTest
                     , MachineLearning.Optimization.MinibatchGradientDescentTest
                     , MachineLearning.PCATest
                     , MachineLearning.RandomTest
                     , MachineLearning.RegressionTest
                     , MachineLearning.SoftmaxClassifierTest
                     , MachineLearning.UtilsTest
                     , MachineLearningTest
                     , Test.HUnit.Approx
                     , Test.HUnit.Plus
  build-depends:       base
                     , mltool
                     , vector >= 0.11
                     , hmatrix >= 0.18.0.0
                     , hmatrix-morpheus >= 0.1.1.0
                     , random >= 1.1
                     , MonadRandom >= 0.4.2.3
                     , test-framework >= 0.8.1.1
                     , test-framework-hunit >= 0.3.0.2
                     , test-framework-quickcheck2 >= 0.3.0.3
                     , HUnit >= 1.3.1.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aligusnet/mltool.git
