name:                mltool
version:             0.1.0.0
synopsis:            Machine Learning Toolbox
description:         Please see README.md
homepage:            https://github.com/alexander-ignatyev/mltool
license:             BSD3
license-file:        LICENSE
author:              Alexander Ignatyev
maintainer:          ignatyev.alexander@gmail.com
copyright:           Alexander Ignatyev
category:            math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable linreg
  hs-source-dirs:      linear_regression
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
                     , hmatrix
                     , mltool
  default-language:    Haskell2010

executable logreg
  hs-source-dirs:      logistic_regression
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
                     , hmatrix
                     , mltool
  default-language:    Haskell2010

executable digits
  hs-source-dirs:      digits_classification
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
                     , hmatrix
                     , mltool
  default-language:    Haskell2010

executable digits-pca
  hs-source-dirs:      digits_classification_pca
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
                     , hmatrix
                     , mltool
  default-language:    Haskell2010

executable digits-svm
  hs-source-dirs:      digits_classification_svm
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
                     , hmatrix
                     , mltool
  default-language:    Haskell2010

executable nn
  hs-source-dirs:      neural_networks
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
                     , hmatrix
                     , mltool
  default-language:    Haskell2010

executable kmeans
  hs-source-dirs:      kmeans
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
                     , hmatrix
                     , MonadRandom
                     , mltool
  default-language:    Haskell2010

executable numerical-issues
  hs-source-dirs:      numerical_issues
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
                     , hmatrix
                     , mltool
  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/alexander-ignatyev/mltool
